   * Implemented [true] and [false] ConditionalWML tags, which describe a
     condition that always yields true or false, respectively.
   * Fixed: Disallow change and remove sections without an id in the ThemeWML.
   * Added [theme] description attribute for including a description of the
     theme that will be displayed in Preferences.
 * Miscellaneous and bug fixes:
   * Fixed: A compilation warning with DEBUG_WINDOW_LAYOUT_GRAPHS.
   * Added -Wold-style-cast to the CMake strict flags.
   * Made sure that cmake does not add -NDEBUG for release builds since this
     flag breaks building.
   * Updated screenshots used inside the ingame help and fixed description of
     orbs.
   * Fixed bug #21659: lua location_set:empty now works as described 

Version 1.11.9:
 * Add-ons client:
   * Display the first and last upload dates in the Description dialog.
 * Add-ons server:
   * Record the first upload date and time for new add-ons.
   * Removed ancient compatibility code used only for add-ons stored by some
     1.5.x versions.
 * AI:
   * Default AI: Gold saving is turned off by default again
   * New macros AI_SAVE_GOLD and AI_SAVE_GOLD_DEFAULT for easy enabling of
     recruitment gold saving in specific scenarios
   * Wolves Micro AI: new optional parameter attack_only_prey=
 * Campaigns:
   * Heir to the Throne:
     * Gave Li'sar a new ability "initiative" (grants adjacent allies first
       strike in melee).
   * Son of the Black Eye:
     * Rebalancing of the campaign continues and is done for Scenarios 1 (End
       of Peace) through 12 (Giving Some Back).  In addition, the following
       not directly balance related changes have also been made:
     * S3: remove AI controller right-click menu option
     * S4 & S9: make AI attack enemies 1 XP from leveling so that it is not
       possible to block key locations with such units
     * S10 & S12: don't give huge unannounced gold bonus to AIs
 * Editor: