@@ -69,7 +69,12 @@ void ttheme_list::pre_show(CVideo& /*video*/, twindow& window)
 		std::map<std::string, string_map> data;
 		string_map column;
 
-		column["label"] = t.name;
+		std::string theme_name = t.name;
+		if(theme_name.empty()) {
+			theme_name = t.id;
+		}
+
+		column["label"] = theme_name;
 		data.insert(std::make_pair("name", column));
 		column["label"] = t.description;
 		data.insert(std::make_pair("description", column));
