@@ -35,6 +35,9 @@ Version 1.11.9+dev:
    * Fixed: Disallow change and remove sections without an id in the ThemeWML.
    * Added [theme] description attribute for including a description of the
      theme that will be displayed in Preferences.
+   * [theme] name attribute is now expected to be translatable and used only
+     for the theme selection UI. Existing [theme]s need to be converted to
+     have a separate 'id' attribute.
  * Miscellaneous and bug fixes:
    * Fixed: A compilation warning with DEBUG_WINDOW_LAYOUT_GRAPHS.
    * Added -Wold-style-cast to the CMake strict flags.
